# globalsoo31mei

./: README.md
src/lss_autonomy/: CMakeLists.txt  package.xml
src/lss_autonomy/config/: waypoints.yaml
src/lss_autonomy/launch/: lss_system.launch  lss_system.launch.backup  path_planner_integrated.launch  simulation_4dof.launch  simulation_webui.launch
src/lss_autonomy/rviz/: default.rviz  simulation.rviz
src/lss_autonomy/scripts/: dstar_lite.py  ilos_follower.py  mission_control.py  obstacle_avoidance.py  path_planner_dstar_apf.py  path_smoother.py  pid_controller.py  safe_apf.py  sim_odom_bridge.py  usv_simulator.py  usv_simulator_4dof.py  waypoint_loader.py  waypoint_visualizer.py
src/lss_controller/: CMakeLists.txt  package.xml
src/lss_controller/scripts/: XYtes.py  differential_control.py  manual_control.py
src/lss_localization/: CMakeLists.txt  package.xml
src/lss_localization/scripts/: boat_tf.py  monitoring_publisher.py
src/lss_vision/: CMakeLists.txt  package.xml  vision.py
src/lss_vision/models/: test.py  test_model_raw.py
src/lss_vision/models/lesgo_openvino_model/: lesgo.xml  metadata.yaml
src/lss_vision/utils/: kalman_tracker.py  test_simulator.py  visual.py
