<?xml version="1.0"?>
<package format="2">
  <name>lss_autonomy</name>
  <version>0.0.0</version>
  <description>LSS Autonomy Package</description>
  <maintainer email="aryaputra@todo.todo">aryaputra</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
