<?xml version="1.0"?>
<package format="2">
  <name>lss_controller</name>
  <version>0.0.0</version>
  <description>LSS Controller Package</description>
  <maintainer email="aryaputra@todo.todo">aryaputra</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
