<?xml version="1.0"?>
<package format="2">
  <name>lss_vision</name>
  <version>0.0.0</version>
  <description>The lss_vision package for Object Detection</description>

  <maintainer email="dev@vessel.com">ASV Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
